<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SelectYourCameraActivity">

    <TextView
        android:layout_marginTop="50dp"
        android:gravity="center_horizontal|center_vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/labe_Welcome"/>
    <TextView
        android:gravity="center_horizontal|center_vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/labe_FirstVisit"/>
    <TextView
        android:gravity="center_horizontal|center_vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/labe_selectCamera"/>
<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:orientation="vertical">

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:orientation="vertical">
        <RadioButton android:id="@+id/radio_FrontCamera"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClickRadio"
            android:text="@string/label_frontCam"
            />
        <RadioButton android:id="@+id/radio_BackCamera"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_backCam"
            android:onClick="onClickRadio"
            />
        <RadioButton android:id="@+id/radio_ExternalCamera"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClickRadio"
            android:text="@string/label_externalCam"
            />
    </RadioGroup>
</LinearLayout>

</LinearLayout>